--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 ################################################################################
 
 /.vs/Git Repo/v16/.suo
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
+/html
+/images
+/scripts
+/style
